adding elements to the DOM and created new object handlers

--- a/todos.css
+++ b/todos.css
@@ -1,7 +1,12 @@
 body {
-    background-color:purple;
+	background-color: purple;
+	font-family: sans-serif;
 }
 
 .title {
-    color: #fff;
+	color: #fff;
+}
+
+div {
+	padding: 5px;
 }
