--- a/todos.css
+++ b/todos.css
@@ -3,10 +3,14 @@ body {
 	font-family: sans-serif;
 }
 
-.title {
+#title {
 	color: #fff;
 }
 
-div {
-	padding: 5px;
+.section {
+	padding: 5px 0 5px 0;
+}
+
+ul li {
+	color: #fff;
 }
