--- a/todos.css
+++ b/todos.css
@@ -13,4 +13,12 @@ body {
 
 ul li {
 	color: #fff;
+	padding: 3px;
+}
+
+.deleteButton {
+	margin-left: 10px;
+	background-color: #800080;
+	color: #fff;
+	border: 1px solid #8d778d;
 }
